--- a/portfolio_site/package.json
+++ b/portfolio_site/package.json
@@ -1,1 +1,15 @@
-{"name": "portfolio-site", "version": "1.0.0"}
+{
+  "name": "portfolio-site",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev -p 3000",
+    "build": "next build",
+    "start": "next start -p 3000"
+  },
+  "dependencies": {
+    "next": "^14.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  }
+}
